--- a/page.css
+++ b/page.css
@@ -1,6 +1,6 @@
  
 
- #Main{
+ #main{
  	text-align: center;
   	color: red;
  }
@@ -16,31 +16,19 @@
  }
 
 
-  #Topper{
- 	background-color: black;
- 	color: green;
+div.topper{
+	color: green;
+
  	padding:20px;
- 	height: 150px;
+ 	min-height: 275px;
     width: 100%;
     background-image: 
-       url("./FBoprisko18.jpg")
-    background-repeat: no-repeat, no-repeat;
+       url("https://koprisko.github.io/FBoprisko18.jpg");
+    background-repeat: no-repeat;
+    color: green;
+ 	
  }
 
-
-
-
-
-#header{
-{
-/* Background pattern from Toptal Subtle Patterns */
-   height: 400px;
-   width: 100%;
-   background-image: 
-       url("FBoprisko18.jpg")
-   background-repeat: no-repeat, no-repeat;
-   color: green;
-}
 
 
 
@@ -61,7 +49,7 @@ button {
         transition: all 0.5s;
         cursor: pointer;
         margin: 5px;
-      }
+}
 
 button:hover {
   background-color: green;
